# deploy-web-back-fedwind

./: .gitignore  centralized_sweep.conf  client_epoch_sweep.conf  clients_epochs_experiments.conf  config_hidden_size.conf  config_mu.conf  example_experiments.conf  experiment_config.conf  experiment_config_FULL_EXAMPLE.conf  experiment_config_OPTIMIZED_ANTI_OVERFIT.conf  experiment_config_OPTIMIZED_ANTI_OVERFIT_predlen_grid.conf  experiment_config_OPTIMIZED_ANTI_OVERFIT_predlen_grid_fedavg.conf  experiments.conf  experiments_centralized.sh  experiments_centralized1.sh  experiments_centralized2.sh  experiments_centralized3.sh  experiments_dropout.conf  experiments_gpu1.sh  experiments_gpu1_1.sh  experiments_gpu1_2.sh  experiments_gpu1_3.sh  experiments_gpu2.sh  experiments_gpu3.sh  experiments_gpu4.sh  gpu_utils.sh  minimal_test.conf  monitor_experiments.sh  quick_client_test.conf  run_centralized_4models_3preds.sh  run_centralized_sweep.sh  run_flower_experiment.sh  run_parallel_experiments.sh  run_with_conda.sh
Long-term_Forecasting/: format_code.py  main.py  requirements_lora.txt  requirements_ss.txt
Long-term_Forecasting/data_provider/: data_loader.py
Long-term_Forecasting/flower_app/: aggregate_centralized_experiments.py  all_experiments_summary.csv  analyze_experiments.py  analyze_fairness.py  centralized_experiment_log.csv  combine_experiment_results.py  master_experiment_log.csv  master_experiment_log.py  plot_all_experiments.py  plot_city_predictability.py  plot_fairness.py  pyproject.toml  run_centralized.py  save_client_stats.py
Long-term_Forecasting/flower_app/fairness_analysis/: client_stats.csv  composite_findings.csv  detailed_metrics.csv
Long-term_Forecasting/flower_app/my_flower_app/: __init__.py  client_app.py  dataloader.py  server_app.py  task.py
Long-term_Forecasting/models/: BART.py  BERT.py  GEMMA.py  GPT4TS.py  GPT4TS_old.py  LLAMA.py  OPT.py  QWEN.py  peft_utils.py
Long-term_Forecasting/scripts/: bert.sh
Long-term_Forecasting/utils/: tools.py
federated-website/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
federated-website/FastApi/: .env  .env.example  README.md  main.py  render.yaml  requirements.txt
federated-website/FastApi/app/: schemas.py
federated-website/FastApi/app/routers/: download.py  federated.py  feedback.py  health.py  jobs.py  train.py  upload.py
federated-website/FastApi/app/services/: federated_training_client.py  feedback_db.py  job_store.py  telegram_service.py  training_client.py  training_service.py
federated-website/app/: globals.css  layout.tsx  page.tsx
federated-website/app/about/: page.tsx
federated-website/app/architecture/: page.tsx
federated-website/app/dashboard/: page.tsx
federated-website/app/data-source/: page.tsx
federated-website/app/instructions/: page.tsx
federated-website/components/: feature-card.tsx  footer.tsx  navbar.tsx  page-layout.tsx  section-header.tsx
federated-website/lib/: api.ts
